2011-11-25  Nick Clifton  <nickc@redhat.com>

	* po/it.po: Updated Italian translation.

2011-11-16  Maciej W. Rozycki  <macro@codesourcery.com>

	* micromips-opc.c (micromips_opcodes): Use NODS rather than TRAP
	for "alnv.ps".

2011-11-02  Nick Clifton  <nickc@redhat.com>

	* po/it.po: New Italian translation.
	* configure.in (ALL_LINGUAS): Add it.
	* configure: Regenerate.
	* po/opcodes.pot: Regenerate.

2011-11-01  DJ Delorie  <dj@redhat.com>

	* Makefile.am (TARGET_LIBOPCODES_CFILES): Add rl78-decode.c and
	rl78-dis.c.
	(MAINTAINERCLEANFILES): Add rl78-decode.c.
	(rl78-decode.c): New rule, built from rl78-decode.opc and opc2c.
	* Makefile.in: Regenerate.
	* configure.in: Add bfd_rl78_arch case.
	* configure: Regenerate.
	* disassemble.c: Define ARCH_rl78.
	(disassembler): Add ARCH_rl78 case.
	* rl78-decode.c: New file.
	* rl78-decode.opc: New file.
	* rl78-dis.c: New file.

2011-10-27  Peter Bergner  <bergner@vnet.ibm.com>

        * ppc-opc.c (powerpc_opcodes) <drrndq, drrndq., dtstexq, dctqpq,
	dctqpq., dctfixq, dctfixq., dxexq, dxexq., dtstsfq, dcffixq, dcffixq.,
	diexq, diexq.>: Use FRT, FRA, FRB and FRBp repsectively on DFP quad
	instructions.

2011-10-26  Nick Clifton  <nickc@redhat.com>

	PR binutils/13348
	* i386-dis.c (print_insn): Fix testing of array subscript.

2011-10-26  Joern Rennecke  <joern.rennecke@embecosm.com>

	* disassemble.c (ARCH_epiphany): Move into alphasorted spot.
	* epiphany-asm.c, epiphany-opc.h: Regenerate.

2011-10-25  Joern Rennecke  <joern.rennecke@embecosm.com>

	* Makefile.am (HFILES): Add epiphany-desc.h and epiphany-opc.h .
	(TARGET_LIBOPCODES_CFILES): Add  epiphany-asm.c, epiphany-desc.c,
	epiphany-dis.c, epiphany-ibld.c and epiphany-opc.c .
	(CLEANFILES): Add stamp-epiphany.
	(EPIPHANY_DEPS): Set.  Make CGEN-generated Epiphany files depend on it.
	(stamp-epiphany): New rule.
	* configure.in: Handle bfd_epiphany_arch.
	* disassemble.c (ARCH_epiphany): Define.
	(disassembler): Handle bfd_arch_epiphany.